Added hosted db

--- a/database.ini
+++ b/database.ini
@@ -1,5 +1,5 @@
 [postgresql]
-host=10.145.98.174
-database=dbmslab
-user=postgres
-password=a
+host=DB_HOST
+database=DB_DATABASE
+user=DB_USER
+password=DB_PASSWORD
