--- a/database.ini
+++ b/database.ini
@@ -1,5 +1,5 @@
 [postgresql]
-host=DB_HOST
-database=DB_DATABASE
-user=DB_USER
-password=DB_PASSWORD
+host=POSTGRES_HOST
+database=POSTGRES_DATABASE
+user=POSTGRES_USER
+password=POSTGRES_PASSWORD
