Added vercel info into deploy

--- a/database.ini
+++ b/database.ini
@@ -1,5 +1,5 @@
 [postgresql]
-host=10.145.98.174
-database=dbmslab
-user=postgres
-password=a
+host=POSTGRES_HOST
+database=POSTGRES_DATABASE
+user=POSTGRES_USER
+password=POSTGRES_PASSWORD
